# csv-processing-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  application.py  config.py  docker-compose.yaml  logger.py  make_celery.py  pyproject.toml  tox.ini
app/: __init__.py  middlewares.py
app/api/: __init__.py  exceptions.py  routes.py
app/extensions/: __init__.py  celery.py  mongo_db.py  spec.py
background_tasks/: __init__.py  csv_processor.py  exceptions.py  tasks.py
daos/: __init__.py  dummy_dao.py  mongo_db.py
dtos/: __init__.py  responses.py  task_dto.py  tasks.py  types.py
helpers/: __init__.py  files.py  parallel_execution.py  strings.py
services/: __init__.py  check_task_status.py  create_task.py  download_task_result.py  mixins.py
tests/: script.py
tests/backgroud_tasks/: test_csv_processor.py
tests/services/: test_check_task_status_service.py  test_create_task_service.py  test_download_task_result.py
tests/static/: 100k_sample.csv  tiny_sample.csv
